publish with version

--- a/src/edge/template.yaml.hbs
+++ b/src/edge/template.yaml.hbs
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: "Studio Guardian ({{environment}})"
+Description: "{{name}} ({{environment}})"
 Resources:
 
   CustomDomainCF:
