--- a/src/edge/template.yaml.hbs
+++ b/src/edge/template.yaml.hbs
@@ -52,15 +52,20 @@ Resources:
       ResponseHeadersPolicyConfig:
         Name: {{{ name }}}-{{{ environment }}}-response-headers-policy
         CorsConfig: 
-          AccessControlAllowCredentials: false
+          AccessControlAllowCredentials: true
           AccessControlAllowHeaders:
-            Items: [ "*" ]
+            Items: [ authorization ]
           AccessControlAllowMethods: 
-            Items: [ ALL ]
+            Items: [ GET, HEAD, PUT, POST, PATCH, DELETE, OPTIONS ]
           AccessControlAllowOrigins: 
-            Items: [ "*" ]
+            Items:
+              - "https://*.dashkite.com"
+              - "https://*.dashkite.io"
           AccessControlExposeHeaders: 
-            Items: [ "*" ]
+            Items:
+              - www-authenticate
+              - location
+              - credentials
           {{!-- 
 
             Chrome max is 7200
@@ -75,7 +80,7 @@ Resources:
           ContentSecurityPolicy: 
             ContentSecurityPolicy: >-
               default-src https: ;
-              script-src https: blob: 'unsafe-inline' ;
+              script-src https: blob: 'unsafe-inline' 'unsafe-eval' ;
               style-src https: 'unsafe-inline' ;
             Override: false
           ContentTypeOptions: 
