include auth and lang in cache key

--- a/src/edge/template.yaml.hbs
+++ b/src/edge/template.yaml.hbs
@@ -31,6 +31,8 @@ Resources:
             HeaderBehavior: whitelist
             Headers:
               - Host
+              - Accept-Language
+              - Authorization
           QueryStringsConfig: 
             QueryStringBehavior: all
 
