--- a/src/edge/template.yaml.hbs
+++ b/src/edge/template.yaml.hbs
@@ -64,9 +64,7 @@ Resources:
           AccessControlAllowMethods: 
             Items: [ GET, HEAD, PUT, POST, PATCH, DELETE, OPTIONS ]
           AccessControlAllowOrigins: 
-            Items:
-              - "https://*.dashkite.com"
-              - "https://*.dashkite.io"
+            Items: "*"
           AccessControlExposeHeaders: 
             Items:
               - www-authenticate
