--- a/src/edge/template.yaml.hbs
+++ b/src/edge/template.yaml.hbs
@@ -64,6 +64,7 @@ Resources:
           AccessControlAllowMethods: 
             Items: [ GET, HEAD, PUT, POST, PATCH, DELETE, OPTIONS ]
           AccessControlAllowOrigins: 
+            {{!-- TODO use the list of aliases here? --}}
             Items: "*"
           AccessControlExposeHeaders: 
             Items:
