--- a/src/edge/template.yaml.hbs
+++ b/src/edge/template.yaml.hbs
@@ -65,7 +65,7 @@ Resources:
             Items: [ GET, HEAD, PUT, POST, PATCH, DELETE, OPTIONS ]
           AccessControlAllowOrigins: 
             {{!-- TODO use the list of aliases here? --}}
-            Items: "*"
+            Items: [ "*" ]
           AccessControlExposeHeaders: 
             Items:
               - www-authenticate
